Resolvendo o problema do storymapjs

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,8 @@
 		<link rel="stylesheet" href="assets/css/plugins.css" />
 		<!--Theme Responsive css-->
 		<link rel="stylesheet" href="assets/css/responsive.css" />
+		<!-- StoryMapJS -->
+		<link rel="stylesheet" href="assets/css/storymap.min.css">
 
 		<!--Theme custom css -->
 		<!-- <link rel="stylesheet" href="assets/css/style.css"> -->
@@ -48,6 +50,7 @@
 	<script src="assets/js/rotate.js"></script>
 	<script src="assets/js/plugins.js"></script>
 	<script src="assets/js/main.js"></script>
+	<!-- StoryMapJS -->
+	<script type="text/javascript" src="assets/js/storymap-min.js"></script>
 
-	<script src="assets/js/storymap.min.js"></script>
 </html>
