Correção do css

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 		<!--Theme Responsive css-->
 		<link rel="stylesheet" href="assets/css/responsive.css" />
 		<!-- StoryMapJS -->
-		<link rel="stylesheet" href="assets/css/storymap.min.css">
+		<link rel="stylesheet" href="assets/css/storymap.css">
 
 		<!--Theme custom css -->
 		<!-- <link rel="stylesheet" href="assets/css/style.css"> -->
