--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>ConciliaFront</title>
+		<title>Concilia BR 381</title>
 		<base href="/">
 
 		<meta name="description" content="">
