Slide das familias e inicio da criação do aviso

--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,8 @@
 	<script src="assets/js/rotate.js"></script>
 	<script src="assets/js/plugins.js"></script>
 	<script src="assets/js/main.js"></script>
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.2/velocity.min.js'></script>
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.2/velocity.ui.min.js'></script>
 	<!-- StoryMapJS -->
 	<script type="text/javascript" src="assets/js/storymap-min.js"></script>
 
