--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 <html class="no-js" lang="pt-br">
 <!--<![endif]-->
 	<head>
-		<meta charset="utf-8">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta http-equiv="Cache-Control" content="no-cache, must-revalidate">
 		<meta http-equiv="Pragma" content="no-cache">
